fix(global.css): muted color contrast in light theme

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -21,7 +21,7 @@
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
 
-    --muted: 0 0% 96.1%;
+    --muted: 0 0% 90%;
     --muted-foreground: 0 0% 45.1%;
 
     --accent: 0 0% 96.1%;
